--- a/chinslickingweb/home/templates/index.html
+++ b/chinslickingweb/home/templates/index.html
@@ -122,7 +122,7 @@
 
         <div class="row">
             {% for item in index_plate_list %}
-            <div class="col-md-3 animated {{item.animate_type.class_name}}">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 animated {{item.animate_type.class_name}}">
                 <div class="inner">
                     <div class="outer">
                         <div class="front">
@@ -432,7 +432,7 @@
             $('.tree-04').on('click', function(){
                 top.layer.open({
                     type: 2,
-                    title: "优惠券抢购",
+                    title: "{% trans '优惠券抢购' %}",
                     area: ['500px', '330px'],
                     // area: ['25%', '35%'],
                     content: "/king/layer_coupon_form",
