--- a/chinslickingweb/static/css/timeline.css
+++ b/chinslickingweb/static/css/timeline.css
@@ -91,6 +91,7 @@ a:hover {
 
 /*----- TIMELINE INFO -----*/
 .timeline-info {
+  position: relative;
   /*font-size: 12px;*/
   font-weight: 700;
   letter-spacing: 3px;
@@ -215,6 +216,30 @@ a:hover {
   }
 }
 
+
+@media only screen and (max-width: 767px) {
+  /*向右箭头*/
+  .timeline-centered > .timeline-item:nth-child(odd) .timeline-info .arrow{
+    position:absolute;
+    top: 10px;
+    left: -4%;
+    width: 0;
+    height: 0;
+    border: 20px solid transparent;
+    border-top: 20px solid #fde981;
+  }
+  /*向左箭头*/
+  .timeline-centered > .timeline-item:nth-child(even) .timeline-info .arrow{
+    position: absolute;
+    top: 10px;
+    left: -4%;
+    width: 0;
+    height: 0;
+    border: 20px solid transparent;
+    border-top: 20px solid #fde981;
+  }
+}
+
 /*----------------------------------------------
     MOD: TIMELINE CENTERED
 ----------------------------------------------*/
@@ -281,6 +306,29 @@ a:hover {
   .timeline-centered .period .timeline-title {
     left: auto;
   }
+
+
+
+  /*向右箭头*/
+  .timeline-centered > .timeline-item:nth-child(odd) .timeline-info .arrow{
+    position:absolute;
+    top: 10px;
+    right: 4%;
+    width: 0;
+    height: 0;
+    border: 20px solid transparent;
+    border-top: 20px solid #fde981;
+  }
+  /*向左箭头*/
+  .timeline-centered > .timeline-item:nth-child(even) .timeline-info .arrow{
+    position: absolute;
+    top: 10px;
+    left: 4.3%;
+    width: 0;
+    height: 0;
+    border: 20px solid transparent;
+    border-top: 20px solid #fde981;
+  }
 }
 
 /*----------------------------------------------
@@ -300,7 +348,7 @@ a:hover {
   background-color: #fde981;
 }*/
 
-/*左侧背景色*/
+/*左侧文字背景色*/
 .timeline-centered > .timeline-item:nth-child(odd) .timeline-info .timeline-info-bg {
   margin: 0px 10px 10px 10px;
   padding: 15px;
@@ -309,19 +357,8 @@ a:hover {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-/*向右箭头*/
-.timeline-centered > .timeline-item:nth-child(odd) .timeline-info .arrow{
-  position:absolute;
-  top: 10px;
-  left: 413px;
-  width: 0;
-  height: 0;
-  border: 20px solid transparent;
-  border-top: 20px solid #fde981;
-}
 
-
-/*右侧背景色*/
+/*右侧文字背景色*/
 .timeline-centered > .timeline-item:nth-child(even) .timeline-info .timeline-info-bg {
   margin: 0px 10px 10px 10px;
   padding: 15px;
@@ -329,14 +366,4 @@ a:hover {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
-}
-/*向左箭头*/
-.timeline-centered > .timeline-item:nth-child(even) .timeline-info .arrow{
-  position: absolute;
-  top: 10px;
-  left: 493px;
-  width: 0;
-  height: 0;
-  border: 20px solid transparent;
-  border-top: 20px solid #fde981;
 }
