--- a/chinslickingweb/home/templates/contact.html
+++ b/chinslickingweb/home/templates/contact.html
@@ -175,8 +175,8 @@
             <div class="text-left">
                 <div>{% trans "如果，您是亲临秦食皇，有以下交通方式可供选择" %}：</div>
                 <div>{% trans "乘坐公交" %}：</div>
-                <div>{% trans "唐延南路傅村东路口（中兴通讯）站  乘坐324路、411路、6路、902路、高新1号线、高新2号线可达，公交车站东侧步行100米即到" %}</div>
-                <div>{% trans "高家堡站  乘坐150路、173路、204路、220路、260路、311路、313路、322路、333路、4-18路、902路、916路、922路可达，公交车站西侧步行150米即到" %}</div>
+                <div>{% trans "<b>唐延南路傅村东路口（中兴通讯）站</b>  乘坐324路、411路、6路、902路、高新1号线、高新2号线可达，公交车站东侧步行100米即到" %}</div>
+                <div>{% trans "<b>高家堡站</b>  乘坐150路、173路、204路、220路、260路、311路、313路、322路、333路、4-18路、902路、916路、922路可达，公交车站西侧步行150米即到" %}</div>
                 <div>{% trans "自驾车" %}：</div>
                 <div>{% trans "导航至“秦食皇品牌展示中心”或“逸翠园i都会-停车场”，步行50米即到" %}</div>
             </div>
@@ -510,7 +510,7 @@
             // map.add(polyline);
 
             //实例化信息窗体
-            var title = '{% tran "秦食皇品牌展示中心" %}',
+            var title = '{% trans "秦食皇品牌展示中心" %}',
                 content = [];
             content.push("<img src='http://aos-cdn-image.amap.com/sns/ugccomment/15cc7aa1-8efd-4960-a497-22917d85e620.jpg?type=pic' style='width:100px;height:80px;'>{% trans '地址：西安市雁塔区唐延南路i都会12号楼10105' %}");
             content.push("电话：029-8918 9518");
