--- a/chinslickingweb/home/static/plugins/kindeditor-4.1.10/themes/default/default.css
+++ b/chinslickingweb/home/static/plugins/kindeditor-4.1.10/themes/default/default.css
@@ -666,6 +666,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
+	/*min-height: 276px;*/
 	box-shadow: 3px 3px 7px #999;
 	-moz-box-shadow: 3px 3px 7px #999;
 	-webkit-box-shadow: 3px 3px 7px #999;
@@ -697,7 +698,8 @@
 .ke-dialog-body {
 	font: 12px/1.5 "sans serif",tahoma,verdana,helvetica;
 	text-align: left;
-	overflow: hidden;
+	/*overflow: hidden;*/
+	overflow: visible;
 	width: 100%;
 }
 .ke-dialog-body textarea {
@@ -866,7 +868,7 @@
 }
 .ke-upload-area .ke-upload-file {
 	position: absolute;
-	font-size: 60px;
+	font-size: 22px;
 	top: 0;
 	right: 0;
 	padding: 0;
