--- a/chinslickingweb/home/templates/footer.html
+++ b/chinslickingweb/home/templates/footer.html
@@ -129,6 +129,7 @@
 <script src="{% static 'js/vendor/loopcounter.js' %}"></script>
 <script src="{% static 'js/vendor/slicknav.min.js' %}"></script>
 <script src="{% static 'js/active.js' %}"></script>
+<script src="http://api.html5media.info/1.1.8/html5media.min.js"></script>
 
 <script>
     $(function(){
